<resources>
    <!-- General -->
    <string name="app_name">HR Techlab</string>
    <string name="Log_Out_Button">Log Out</string>
    <string name="Logo_Desc">The Hogeschool Rotterdam Logo</string>

    <!-- Buttons -->
    <string name="Inventory_Button">View Inventory</string>
    <string name="Reserve_Button">Reserve Item</string>
    <string name="My_Items_Button">My Items</string>
    <string name="ToS_Button">Terms of Service</string>
    <string name="Profile_Button">Account Settings</string>
    <string name="BackToMenu_Button">Back to Menu</string>

    <!-- Account Settings -->
    <string name="AccountSettings_Title">Account Settings</string>
    <string name="Username_Title">Username:</string>
    <string name="Email_Title">Email:</string>
    <string name="Student_Number_Title">Student Number:</string>

    <!-- Account Info -->
    <string name="AccountInfo_Title">Account Information</string>

    <!-- Inventory Screen -->
    <string name="Inventory_Header">Inventory</string>

    <!-- User List Screen -->
    <string name="RUL_Header">Current Users:</string>
    <string-array name="RoleList">
        <item>Select Role</item>
        <item>Admin</item>
        <item>User</item>
    </string-array>

    <!-- My Items Screen -->
    <string name="Res_Header">Reserved items:</string>
    <string name="Borrow_Header">Borrowed items:</string>

    <!-- Reserve Items Screen -->
    <string name="Reserve_Header">Reserve Items</string>
    <string name="Confirmsel_Button">Confirm Selection</string>

    <!--Login Screen -->
    <string name="Email_Title2">Email</string>
    <string name="Password_Title">Password</string>
    <string name="New_User">New user? Click here!</string>
    <string name="Login">Login</string>

    <!--Testing & Development -->
    <string name="Inventory_filler">Inventory screen</string>
    <string name="Reservation_filler">Reserve Item screen</string>
    <string name="MyItems_filler">My Items screen</string>
    <string name="ComingSoon">Coming Soon</string>
    <string name="FILLER_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="Data_Filler">[Data]</string>
    <string name="UserName_Filler">User1293920</string>
    <string name="Email_Filler">ExampleUser1502@email.com</string>
    <string name="StudentNum_Filler">0123456</string>
    <string name="nickname">NickName</string>


</resources>
